fixed some height problems on smaller screens and changes background color of cards

--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,8 +1,8 @@
 .size {
     width: 300px;
     height: 400px;
-    background-color: rgba(255, 89, 89, 0.85);
-    border: #FFC56C solid 2px;
+    background-color: rgba(79, 88, 28, 0.30);
+    border: rgba(243, 234, 219, 0.4) solid 6px;
     /* border-top-left-radius: 50%; */
     margin: 10px;
     padding: 10px;
