--- a/src/components/Section/style.css
+++ b/src/components/Section/style.css
@@ -30,7 +30,8 @@
   }
 
   .hero2 {
-    height: 1250px
+    height: fit-content
+
   }
 
   @media only screen and (max-width: 375px) {
